--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500" rel="stylesheet">
+	<link rel="icon"  href="%PUBLIC_URL%/favicon_32.png">
 	<title>Youtube Playlists</title>
 	<META NAME="viewport" CONTENT="width=device-width, height=device-height, initial-scale=1, user-scalable=no" />
 	<style>
